chore: fixed z-index references

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -45,22 +45,7 @@ $navbar-height-desktop: px(80);
 // ====================================================================
 // List of z-index element
 // ====================================================================
-$elements: pages, main-nav, rotate;
-
-$z-index: (
-  modal: 10,
-  playButton: 10,
-  close: 20,
-  video: 20
-);
-
-@function z-index($key) {
-  @return map-get($z-index, $key);
-}
-
-@mixin z-index($key) {
-  z-index: z-index($key);
-}
+$elements: pages, main-nav, rotate, modal, playButton, video, close;
 
 // ====================================================================
 // Font Names
